Update video URLs to use Cloudinary

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div>
         <section class="showcase">
         <video id="background-video" muted loop autoplay>
-            <source src="vecteezy_photovoltaics-solar-panels-in-a-solar-park-solar-panels-on_39940264.mp4"
+            <source src="https://res.cloudinary.com/dgowk0oun/video/upload/v1759261218/vecteezy_photovoltaics-solar-panels-in-a-solar-park-solar-panels-on_39940264_hgxlyu.mp4"
                 type="video/mp4">
         </video>
 
