Add playsinline attribute to prevent video fullscreen on mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div>
         <section class="showcase">
-        <video id="background-video" muted loop autoplay>
+        <video id="background-video" muted loop autoplay playsinline>
             <source src="https://res.cloudinary.com/dgowk0oun/video/upload/v1759261218/vecteezy_photovoltaics-solar-panels-in-a-solar-park-solar-panels-on_39940264_hgxlyu.mp4"
                 type="video/mp4">
         </video>
