Update HTML files across the site

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
                 </div>
             </div>
             <div>
-                <p>&copy; 2024 CLG Securities Limited. All rights reserved.</p>
+                <p>&copy; 2024 African Extractive Minerals Development Bank (AEMBank). All rights reserved.</p>
             </div>
         </footer>
     </div>
