--- a/learn.html
+++ b/learn.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div>
-                <p>&copy; 2024 CLG Securities Limited. All rights reserved.</p>
+                <p>&copy; 2024 African Extractive Minerals Development Bank (AEMBank). All rights reserved.</p>
             </div>
         </footer>
     </div>
