Update About Us

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     bridge the funding deficit which has caused the underdevelopment of the extractive minerals value chain in Continental
                     African countries. Our goal is to encourage indigenous participation in the African extractive minerals sector
                     by providing
-                    necessary access to funding. The African Minerals Strategy Group is a shareholder and is a body consisting of 16 minerals-rich African countries, with Nigeria as the Chair</p>
+                    necessary access to funding. The African Minerals Strategy Group is a shareholder and is a body consisting of 16 minerals-rich African countries, with Nigeria as the Chair.</p>
             </div>
             <div class="main">
                 <img src="images/vecteezy_businessman-hand-draws-business-success-chart_5245507.jpg">
